public enum ChoiceType {
    ROCK, PAPER, SCISSORS
}
